[tool.poetry]
name = "llm-agent"
version = "0.1.0"
description = "An extendable LLM agent framework"
authors = ["Sakthi Ramanathan <sakthiram.mit@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_agent", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9,!=3.9.7"
streamlit = "^1.37.0"
langchain = "^0.2.12"
langchain-community = "^0.2.11"
langgraph = "^0.1.19"
tiktoken = "^0.7.0"
botocore = "^1.34.153"
boto3 = "^1.34.153"
langchain-aws = "^0.1.18"
streamlit-tree-select = "^0.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chitti = 'scripts:codegenie'